# Computing-Systems-Architecture

./: TestsTimeComparison.xlsx
Fifth/: CMakeLists.txt  Report.txt  main.cpp
Fifth/Entities/: Bee.cpp  Bee.h  Hive.cpp  Hive.h  WinniePooh.cpp  WinniePooh.h
First/: Report.txt
First/FirstProject/: CMakeLists.txt  PlantContainer.cpp  PlantContainer.h  main.cpp
First/FirstProject/Plant-entity classes/: Bush.cpp  Bush.h  Flower.cpp  Flower.h  Plant.cpp  Plant.h  Tree.cpp  Tree.h
First/Tests/1/: command_line.txt  output1.txt  output2.txt
First/Tests/2/: command_line.txt  output2.txt
First/Tests/3/: command_line.txt  output2.txt
First/Tests/4/: command_line.txt  output1.txt  output2.txt
First/Tests/5/: command_line.txt  output1.txt  output2.txt
Second/: Report.txt
Second/SecondProject/: CMakeLists.txt  PlantContainer.cpp  PlantContainer.h  main.cpp
Second/SecondProject/Plant-entity classes/: Bush.cpp  Bush.h  Flower.cpp  Flower.h  Plant.cpp  Plant.h  Tree.cpp  Tree.h
Second/Tables/: ПП.xlsx  ТТ.xlsx
Second/Tests/1/: command_line.txt  output1.txt  output2.txt
Second/Tests/2/: command_line.txt  output1.txt
Second/Tests/3/: command_line.txt
Second/Tests/4/: command_line.txt  output1.txt  output2.txt
Second/Tests/5/: command_line.txt  output1.txt  output2.txt
Third/: Report.txt
Third/Tables/: ПП.xlsx
Third/Tests/1/: command_line.txt  output1.txt  output2.txt
Third/Tests/2/: command_line.txt  input1.txt  output1.txt  output2.txt
Third/Tests/3/: command_line.txt  input1.txt  output2.txt
Third/Tests/4/: command_line.txt  output1.txt  output2.txt
Third/ThirdProject/: PlantContainer.py  main.py
(+7 files in other folders)
